fixing map.ini for cura-legacy

--- a/settings/slicer/cura-legacy/base.ini
+++ b/settings/slicer/cura-legacy/base.ini
@@ -2,14 +2,7 @@ nozzleSize=400
 filamentDiameter=1750 
 sparseInfillLineDistance=2000
 layerThickness=200
-startCode="""
-M107
-M104 S200
-G28 X Y
-G1 X100
-G28 Z
-M109 S200
-"""
+startCode="M107\nM104 S200\nG28 X0 Y0\nG1 X100\nG28 Z0M109 S200\n"
 printSpeed=60
 infillSpeed=80
 skinSpeed=20
