--- a/settings/slicer/cura-legacy/base.ini
+++ b/settings/slicer/cura-legacy/base.ini
@@ -2,7 +2,7 @@ nozzleSize=400
 filamentDiameter=1750 
 sparseInfillLineDistance=2000
 layerThickness=200
-startCode="M107\nM104 S200\nG28 X0 Y0\nG1 X100\nG28 Z0M109 S200\n"
+startCode="M107\nM104 S200\nG28 X0 Y0\nG1 X100\nG28 Z0\nM109 S200"
 printSpeed=60
 infillSpeed=80
 skinSpeed=20
