--- a/settings/slicer/cura-legacy/map.ini
+++ b/settings/slicer/cura-legacy/map.ini
@@ -1,4 +1,9 @@
 layerThickness={$layer_height*1000}
-spareInfillLineDistance={1/($infill_density+0.001)}
+#spareInfillLineDistance={1/($fill_density+0.001)}
+spareInfillLineDistance={$fill_density==0?2000:$nozzle_diameter*100/$fill_density*2}
 nozzleSize={$nozzle_diameter*1000}
 filamentDiameter={$filament_diameter*1000}
+startCode=$start_gcode
+endCode=$end_gcode
+upSkinCount={$top_thickness?int($top_thickness/$layer_height+0.5):$top_layers}
+downSkinCount={$bottom_thickness?int($bottom_thickness/$layer_height+0.5):$bottom_layers}
