improving cura-legacy support

--- a/settings/slicer/cura-legacy/map.ini
+++ b/settings/slicer/cura-legacy/map.ini
@@ -1,4 +1,5 @@
 layerThickness={$layer_height*1000}
+filamentDiameter{$filament_diameter*1000}
 #sparseInfillLineDistance={1/($fill_density+0.001)}
 sparseInfillLineDistance={$fill_density==0?2000000:$nozzle_diameter*100/$fill_density*1000}
 nozzleSize={$nozzle_diameter*1000}
@@ -7,4 +8,5 @@ startCode=$start_gcode
 endCode=$end_gcode
 upSkinCount={$top_thickness?int($top_thickness/$layer_height+0.5):$top_layers}
 downSkinCount={$bottom_thickness?int($bottom_thickness/$layer_height+0.5):$bottom_layers}
-autoCenter=0
+insetCount={$wall_thickness>0?int($wall_thickness/$nozzle_diameter+0.5):$perimeters}
+retractionAmount={$retraction_length*1000}
