--- a/settings/printer/default.ini
+++ b/settings/printer/default.ini
@@ -34,3 +34,14 @@ start-gcode = "G28 X0 Y0\nG1 X100 F6000\nG28 Z0\nM206 X0 Y-25 Z0.15\n"
 end-gcode = "G1 Y290 F6000\nM84\n"
 
 retraction-length = 2
+
+print-speed = 60
+travel-speed = 130
+
+perimeter-speed = 60
+small-perimeter-speed = 15
+
+infill-speed = 80
+bridge-speed = 60
+retract-speed = 40
+
