--- a/settings/slicer/cura-legacy/map.ini
+++ b/settings/slicer/cura-legacy/map.ini
@@ -10,3 +10,11 @@ upSkinCount={$top_thickness?int($top_thickness/$layer_height+0.5):$top_layers}
 downSkinCount={$bottom_thickness?int($bottom_thickness/$layer_height+0.5):$bottom_layers}
 insetCount={$wall_thickness>0?int($wall_thickness/$nozzle_diameter+0.5):$perimeters}
 retractionAmount={$retraction_length*1000}
+printSpeed=$print_speed
+initialLayerSpeed=$first_layer_speed
+skinSpeed={$perimeter_speed?$perimeter_speed*0.5:$print_speed*0.8}
+insetXSpeed=$perimeter_speed
+inset0Speed=$perimeter_speed
+infillSpeed={$infill_speed?$infill_speed:$print_speed*1.5}
+retractionSpeed={$retract_speed?$retract_speed:40}
+moveSpeed=$travel_speed
