--- a/settings/slicer/cura/map.ini
+++ b/settings/slicer/cura/map.ini
@@ -33,4 +33,8 @@ material_bed_temperature_layer_0=$bed_temperature
 material_print_temperature_layer_0=$first_layer_temperature
 #print_temperature=$temperature
 #print_bed_temperature=$bed_temperature
-
+speed_print=$print_speed
+speed_wall={$perimeter_speed?$perimeter_speed:$print_speed*0.8}
+speed_infill={$infill_speed?$infill_speed:$print_speed*1.5}
+retraction_speed={$retract_speed?$retract_speed:40}
+speed_travel=$travel_speed
