--- a/settings/slicer/slic3r-pe/map.ini
+++ b/settings/slicer/slic3r-pe/map.ini
@@ -3,3 +3,4 @@ bottom_solid_layers={$bottom_thickness>0?int($bottom_thickness/$layer_height+0.5
 perimeters={$wall_thickness>0?int($wall_thickness/$nozzle_diameter+0.5):$perimeters}
 first_layer_bed_temperature=$bed_temperature
 #first_layer_bed_temperature={$first_layer_bed_temperature?$first_layer_bed_temperature:$bed_temperature}
+max_print_speed={$print_speed*1.2}
