--- a/settings/printer/ctc-diy-i3.ini
+++ b/settings/printer/ctc-diy-i3.ini
@@ -33,7 +33,7 @@ bottom-layers = 3
 
 # -- Note: either define z_offset for each slicer (cura 3.5.x doesn't have this feature yet) OR define M206 Z0.15 (older Marlin Z-0.15 required)
 start-gcode = "G21\nG90\nM92 X100 Y100 E95 Z3200\nM206 X0 Y0 Z0.15\nG28 X0 Y0\nG1 X100 F6000\nG28 Z0\n"
-end-gcode = "G1 Y180 F6000\nM84\n"
+end-gcode = "G1 Y180 F6000\nM104 S0\nM140 S0\nM84\n"
 
 retraction-length = 4
 
