--- a/settings/printer/default.ini
+++ b/settings/printer/default.ini
@@ -21,13 +21,13 @@ first-layer-speed = 20
 skirts = 2
 
 # -- init values so no warnings are thrown
-top-thickness = 1
-bottom-thickness = 1
-wall-thickness = 0.8
+top-thickness = 0
+bottom-thickness = 0
+wall-thickness = 0
 
-# perimeters = 2
-# top-layers = 3
-# bottom-layers = 3
+perimeters = 2
+top-layers = 2
+bottom-layers = 2
 
 # -- Note: either define z_offset for each slicer (cura 3.5.x doesn't have this feature yet) OR define M206 Z0.15
 start-gcode = "G28 X0 Y0\nG1 X100 F6000\nG28 Z0\nM206 X0 Y-25 Z0.15\n"
