--- a/settings/printer/default.ini
+++ b/settings/printer/default.ini
@@ -19,6 +19,8 @@ first-layer-height = 0.25
 first-layer-speed = 20
 
 skirts = 2
+brims = 0
+rafts = 0
 
 # -- init values so no warnings are thrown
 top-thickness = 0
@@ -44,4 +46,5 @@ small-perimeter-speed = 15
 infill-speed = 80
 bridge-speed = 60
 retract-speed = 40
+
 
