--- a/settings/slicer/cura/map.ini
+++ b/settings/slicer/cura/map.ini
@@ -38,3 +38,7 @@ speed_wall={$perimeter_speed?$perimeter_speed:$print_speed*0.8}
 speed_infill={$infill_speed?$infill_speed:$print_speed*1.5}
 retraction_speed={$retract_speed?$retract_speed:40}
 speed_travel=$travel_speed
+adhesion_type={$rafts>0?"raft":$brims>0?"brim":"skirt"}
+brim_line_count=$brims
+skirt_line_count=$skirts
+raft_surface_layers=$rafts
