--- a/settings/slicer/slic3r/map.ini
+++ b/settings/slicer/slic3r/map.ini
@@ -4,4 +4,8 @@ perimeters={$wall_thickness>0?int($wall_thickness/$nozzle_diameter+0.5):$perimet
 first_layer_bed_temperature=$bed_temperature
 #first_layer_bed_temperature={$first_layer_bed_temperature?$first_layer_bed_temperature:$bed_temperature}
 max_print_speed={$print_speed*1.2}
+brim_width={$brims>0?$nozzle_diameter*$brims:0}
+raft_layers=$rafts
+skirts={$brims>0||$rafts>0?0:$skirts}
+skirt_height={$brims>0||$rafts>0?0:$skirts}
 
