+ support: 'none', 'bed' or 'everywhere' slicer-independent

--- a/settings/printer/default.ini
+++ b/settings/printer/default.ini
@@ -22,6 +22,11 @@ skirts = 2
 brims = 0
 rafts = 0
 
+support = none
+support_angle = 50
+
+seam = aligned
+
 # -- init values so no warnings are thrown
 top-thickness = 0
 bottom-thickness = 0
