--- a/settings/slicer/cura/map.ini
+++ b/settings/slicer/cura/map.ini
@@ -42,3 +42,6 @@ adhesion_type={$rafts>0?"raft":$brims>0?"brim":"skirt"}
 brim_line_count=$brims
 skirt_line_count=$skirts
 raft_surface_layers=$rafts
+support_enable={'$support' ne 'none' && '$support' ne '0' ? 1 : 0}
+support_type={'$support' eq "bed"?"buildplate":"everywhere"}
+z_seam_type={'$seam' eq 'aligned' ? 'sharpest_corner' : '$seam' eq 'nearest' ? "shortest" : '$seam' eq 'rear'? 'back' : '$seam'}
