adding 'support' for cura-legacy as well

--- a/settings/slicer/cura-legacy/map.ini
+++ b/settings/slicer/cura-legacy/map.ini
@@ -18,3 +18,5 @@ inset0Speed=$perimeter_speed
 infillSpeed={$infill_speed?$infill_speed:$print_speed*1.5}
 retractionSpeed={$retract_speed?$retract_speed:40}
 moveSpeed=$travel_speed
+supportEverywhere={'$support' eq 'bed' ? 0 : 1 }
+supportAngle={'$support'ne'none'?50:-1}
