--- a/settings/slicer/slic3r-pe/map.ini
+++ b/settings/slicer/slic3r-pe/map.ini
@@ -9,5 +9,6 @@ raft_layers=$rafts
 skirts={$brims>0||$rafts>0?0:$skirts}
 skirt_height={$brims>0||$rafts>0?0:$skirts}
 support_material={'$support' eq 'bed' || '$support' eq 'everywhere' ? 1 : 0}
+support_material_angle=$support_angle
 support_material_buildplate_only={'$support' eq 'bed' ? 1 : 0 }
 seam_position={'$seam' eq 'sharpest_corner' ? 'aligned' : '$seam' }
