--- a/settings/slicer/slic3r/map.ini
+++ b/settings/slicer/slic3r/map.ini
@@ -10,4 +10,5 @@ skirts={$brims>0||$rafts>0?0:$skirts}
 skirt_height={$brims>0||$rafts>0?0:$skirts}
 support_material={'$support' eq 'bed' || '$support' eq 'everywhere' ? 1 : 0}
 support_material_buildplate_only={'$support' eq 'bed' ? 1 : 0 }
+support_material_angle=$support_angle
 seam_position={'$seam' eq 'rear' ? 'aligned' : '$seam' eq 'sharpest_corner' ? 'aligned' : '$seam'}
