--- a/settings/printer/default.ini
+++ b/settings/printer/default.ini
@@ -39,6 +39,7 @@ bottom-layers = 2
 # -- Note: either define z_offset for each slicer (cura 3.5.x doesn't have this feature yet) OR define M206 Z0.15
 start-gcode = "G28 X0 Y0\nG1 X100 F6000\nG28 Z0\nM206 X0 Y-25 Z0.15\n"
 end-gcode = "G1 Y290 F6000\nM104 S0\nM140 S0\nM84\n"
+abort-gcode ="M104 S0 ; extruder heater off\nM140 S0 ; heated bed heater off (if you have it)\nG1 X10 F9000 ; go way to the left\nM84     ; motors off\n"
 
 retraction-length = 2
 
