--- a/settings/slicer/slic3r-pe/map.ini
+++ b/settings/slicer/slic3r-pe/map.ini
@@ -12,3 +12,7 @@ support_material={'$support' eq 'bed' || '$support' eq 'everywhere' ? 1 : 0}
 support_material_angle=$support_angle
 support_material_buildplate_only={'$support' eq 'bed' ? 1 : 0 }
 seam_position={'$seam' eq 'sharpest_corner' ? 'aligned' : '$seam' }
+nozzle_diameter={$extruders_count>1?join(',',("$nozzle_diameter")x$extruders_count):$nozzle_diameter}
+filament_diameter={$extruders_count>1?join(',',("$filament_diameter")x$extruders_count):$filament_diameter}
+temperature={$extruders_count>1?join(',',("$temperature")x$extruders_count):$temperature}
+first_layer_temperature={$extruders_count>1?join(',',("$first_layer_temperature")x$extruders_count):$first_layer_temperature}
