--- a/settings/slicer/slic3r/map.ini
+++ b/settings/slicer/slic3r/map.ini
@@ -12,3 +12,5 @@ support_material={'$support' eq 'bed' || '$support' eq 'everywhere' ? 1 : 0}
 support_material_buildplate_only={'$support' eq 'bed' ? 1 : 0 }
 support_material_angle=$support_angle
 seam_position={'$seam' eq 'rear' ? 'aligned' : '$seam' eq 'sharpest_corner' ? 'aligned' : '$seam'}
+nozzle_diameter={$extruders_count>1?join(',',("$nozzle_diameter")x$extruders_count):$nozzle_diameter}
+filament_diameter={$extruders_count>1?join(',',("$filament_diameter")x$extruders_count):$filament_diameter}
