adding support for 'cool_fan_speed', 'cool_fan_speed_min/max', slicer independent

--- a/settings/slicer/slic3r-pe/map.ini
+++ b/settings/slicer/slic3r-pe/map.ini
@@ -16,3 +16,5 @@ nozzle_diameter={$extruders_count>1?join(',',("$nozzle_diameter")x$extruders_cou
 filament_diameter={$extruders_count>1?join(',',("$filament_diameter")x$extruders_count):$filament_diameter}
 temperature={$extruders_count>1?join(',',("$temperature")x$extruders_count):$temperature}
 first_layer_temperature={$extruders_count>1?join(',',("$first_layer_temperature")x$extruders_count):$first_layer_temperature}
+max_fan_speed=${cool_fan_speed_max}
+min_fan_speed=${cool_fan_speed_min}
