fix, preliminary support for 3mj format

--- a/settings/slicer/prusa/map.ini
+++ b/settings/slicer/prusa/map.ini
@@ -12,5 +12,5 @@ support_material={'$support' eq 'bed' || '$support' eq 'everywhere' ? 1 : 0}
 support_material_angle=$support_angle
 support_material_buildplate_only={'$support' eq 'bed' ? 1 : 0 }
 seam_position={'$seam' eq 'sharpest_corner' ? 'aligned' : '$seam' }
-max_fan_speed=${cool_fan_speed_max}
-min_fan_speed=${cool_fan_speed_min}
+max_fan_speed=$cool_fan_speed_max
+min_fan_speed=$cool_fan_speed_min
