--- a/settings/slicer/slic3r/map.ini
+++ b/settings/slicer/slic3r/map.ini
@@ -14,6 +14,6 @@ support_material_angle=$support_angle
 seam_position={'$seam' eq 'rear' ? 'aligned' : '$seam' eq 'sharpest_corner' ? 'aligned' : '$seam'}
 nozzle_diameter={$extruders_count>1?join(',',("$nozzle_diameter")x$extruders_count):$nozzle_diameter}
 filament_diameter={$extruders_count>1?join(',',("$filament_diameter")x$extruders_count):$filament_diameter}
-max_fan_speed=${cool_fan_speed_max}
-min_fan_speed=${cool_fan_speed_min}
+max_fan_speed=$cool_fan_speed_max
+min_fan_speed=$cool_fan_speed_min
 
