improved support for slicer4rtn

--- a/settings/slicer/slic3r/map.ini
+++ b/settings/slicer/slic3r/map.ini
@@ -16,4 +16,5 @@ nozzle_diameter={$extruders_count>1?join(',',("$nozzle_diameter")x$extruders_cou
 filament_diameter={$extruders_count>1?join(',',("$filament_diameter")x$extruders_count):$filament_diameter}
 max_fan_speed=$cool_fan_speed_max
 min_fan_speed=$cool_fan_speed_min
-
+retract_length=$retraction_length?$retraction_length:2
+retract_speed=$retraction_speed?$retraction_speed:80
