adding support for KiriMotoSlicer and FreeCAD (FCStd), IGES, and STEP via external helper 'freecad2any'

--- a/settings/slicer/5dmaker/map.ini
+++ b/settings/slicer/5dmaker/map.ini
@@ -4,7 +4,7 @@
 top_layers={$top_thickness>0?int($top_thickness/$layer_height+0.5):$top_layers}
 bottom_layers={$bottom_thickness>0?int($bottom_thickness/$layer_height+0.5):$bottom_layers}
 #wall_line_count={$wall_thickness>0?int($wall_thickness/$nozzle_diameter+0.5):$perimeters}
-retraction_length=$retraction_amount
+retraction_amount=$retraction_length
 #machine_start_gcode=$start_gcode
 #machine_end_gcode=$end_gcode
 #retraction_amount=$retraction_length
@@ -36,7 +36,7 @@ material_print_temperature_layer_0={$first_layer_bed_temparature?$first_layer_be
 #speed_print=$print_speed
 #speed_wall={$perimeter_speed?$perimeter_speed:$print_speed*0.8}
 #speed_infill={$infill_speed?$infill_speed:$print_speed*1.5}
-#retraction_speed={$retract_speed?$retract_speed:40}
+retraction_speed={$retract_speed?$retract_speed:80}
 speed_travel=$travel_speed
 adhesion_type={$rafts>0?"raft":$brims>0?"brim":"skirt"}
 #brim_line_count=$brims
