--- a/settings/slicer/cura-slicer/map.ini
+++ b/settings/slicer/cura-slicer/map.ini
@@ -4,7 +4,7 @@ machine_material_diameter=$filament_diameter
 top_layers={$top_thickness>0?int($top_thickness/$layer_height+0.5):$top_layers}
 bottom_layers={$bottom_thickness>0?int($bottom_thickness/$layer_height+0.5):$bottom_layers}
 wall_line_count={$wall_thickness>0?int($wall_thickness/$nozzle_diameter+0.5):$perimeters}
-retraction_amount=$retraction_amount
+retraction_amount=$retraction_length
 machine_start_gcode=$start_gcode
 machine_end_gcode=$end_gcode
 retraction_amount=$retraction_length
