better mandoline support

--- a/settings/slicer/mandoline/map.ini
+++ b/settings/slicer/mandoline/map.ini
@@ -11,3 +11,4 @@ nozzle_0_max_speed=$print_speed
 bed_temp=$bed_temperature
 infill_density=$fill_density
 nozzle_0_temperature=$temperature
+shell_count=$perimeters
