--- a/settings/slicer/slic3r/map.ini
+++ b/settings/slicer/slic3r/map.ini
@@ -7,7 +7,7 @@ max_print_speed={$print_speed*1.2}
 brim_width={$brims>0?$nozzle_diameter*$brims:0}
 raft_layers=$rafts
 skirts={$brims>0||$rafts>0?0:$skirts}
-skirt_height={$brims>0||$rafts>0?0:$skirts}
+skirt_height={$brims>0||$rafts>0?0:1}
 support_material={'$support' eq 'bed' || '$support' eq 'everywhere' ? 1 : 0}
 support_material_buildplate_only={'$support' eq 'bed' ? 1 : 0 }
 support_material_angle=$support_angle
