--- a/settings/slicer/mandoline/map.ini
+++ b/settings/slicer/mandoline/map.ini
@@ -10,5 +10,5 @@ bed_center_y={$machine_depth/2}
 nozzle_0_max_speed=$print_speed
 bed_temp=$bed_temperature
 infill_density=$fill_density
-nozzle_0_temperature=$temperature
+nozzle_0_temp=$temperature
 shell_count=$perimeters
