--- a/settings/printer/default.ini
+++ b/settings/printer/default.ini
@@ -9,7 +9,7 @@ filament-diameter = 1.75
 nozzle-diameter = 0.4
 layer-height = 0.3
 
-fill-density = 20%
+fill-density = 20
 
 temperature = 200
 first-layer-temperature = 210
