better support for cura-slicer (cli wrapper), better support for CuraEngine 5.x

--- a/settings/slicer/cura/base.ini
+++ b/settings/slicer/cura/base.ini
@@ -528,3 +528,28 @@ z_seam_x="190.0"
 z_seam_y="900"
 zig_zaggify_infill="False"
 zig_zaggify_support="False"
+machine_extruders_share_nozzle="false"
+machine_always_write_active_tool="false"
+machine_heated_build_volume="false"
+retraction_hop_after_extruder_switch_height="false"
+wipe_retraction_enable="false"
+wipe_retraction_amount="0"
+wipe_retraction_retract_speed="60"
+wipe_retraction_prime_speed="60"
+wipe_retraction_extra_prime_amount="60"
+wipe_pause="0"
+wipe_hop_enable="false"
+wipe_hop_amount="0"
+wipe_hop_speed="60"
+wipe_brush_pos_x="0"
+wipe_repeat_count="3"
+wipe_move_distance="5"
+max_extrusion_before_wipe="10"
+clean_between_layers="false"
+machine_extruders_share_heater="false"
+machine_extruder_start_code=""
+machine_extruder_end_code=""
+support_infill_angles="[60,30]"
+support_roof_angles="[60,30]"
+support_bottom_angles="[60,30]"
+
