--- a/settings/slicer/prusa/base.ini
+++ b/settings/slicer/prusa/base.ini
@@ -185,3 +185,4 @@ wiping_volumes_extruders = 70,70
 wiping_volumes_matrix = 0
 xy_size_compensation = 0
 z_offset = 0
+machine_limits_usage = ignore
