--- a/settings/slicer/cura/map.ini
+++ b/settings/slicer/cura/map.ini
@@ -3,13 +3,14 @@ machine_nozzle_diameter=$nozzle_diameter
 machine_material_diameter=$filament_diameter
 top_layers={$top_thickness>0?int($top_thickness/$layer_height+0.5):$top_layers}
 bottom_layers={$bottom_thickness>0?int($bottom_thickness/$layer_height+0.5):$bottom_layers}
+initial_bottom_layers={$bottom_thickness>0?int($bottom_thickness/$layer_height+0.5):$bottom_layers}
 wall_line_count={$wall_thickness>0?int($wall_thickness/$nozzle_diameter+0.5):$perimeters}
 retraction_amount=$retraction_length
 machine_start_gcode=$start_gcode
 machine_end_gcode=$end_gcode
 retraction_amount=$retraction_length
 layer_height_0={$first_layer_height>0?$first_layer_height:$layer_height}
-print_speed_layer_0=$first_layer_speed
+speed_print_layer_0=$first_layer_speed
 material_bed_temperature_layer_0={$first_layer_bed_temparature?$first_layer_bed_temperature:$bed_temperature}
 line_width=$nozzle_diameter
 infill_line_width=$nozzle_diameter 
